--- a/src/gruz200.html
+++ b/src/gruz200.html
@@ -593,7 +593,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
 <link rel="stylesheet" href="/assets/template/vendor/slick/slick.css">
-<link rel="stylesheet" type="text/css" href="/assets/template/vendor/slick/slick-theme.css"/>
+<!--link rel="stylesheet" type="text/css" href="/assets/template/vendor/slick/slick-theme.css"/-->
 <script src="/assets/template/vendor/slick/slick.js"></script>
 <script src="/assets/template/js/scripts.js"></script>
 
