--- a/src/index.html
+++ b/src/index.html
@@ -661,19 +661,19 @@
 					</div>
 				</div>
 				<div class="main-labels">
-					<div class="main-labels__item main-labels__item--contract labels-contract">
+					<a href="#" class="main-labels__item main-labels__item--contract labels-contract">
 						<div class="labels-contract__name">
 							ГБУ<br class="in-mobile"> МФЦ-Ритуал
 						</div>
 						<div class="labels-contract__info">
 							Договор №345 ЦДС/К-18
 						</div>
-					</div>
-					<div class="main-labels__item main-labels__item--mo labels-mo">
+					</a>
+					<a href="#" class="main-labels__item main-labels__item--mo labels-mo">
 						<div class="labels-mo__name">
 							Московская<br /> область
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="section-menu">
 					<a href="#" class="section-menu__item section-menu__item--morgue">
@@ -761,19 +761,19 @@
 					<div class="main-awards__subheader">Ваше мнение - наша награда!</div>
 					<div class="main-awards__list grateful-slider">
 						<div class="main-awards__item">
-							<img src="/assets/template/images/blagodar01.jpg" alt="">
+							<a href="/assets/template/images/blagodar01.jpg" data-fancybox="grateful"><img src="/assets/template/images/blagodar01.jpg" alt=""></a>
 						</div>
 						<div class="main-awards__item">
-							<img src="/assets/template/images/blagodar02.jpg" alt="">
+							<a href="/assets/template/images/blagodar02.jpg" data-fancybox="grateful"><img src="/assets/template/images/blagodar02.jpg" alt=""></a>
 						</div>
 						<div class="main-awards__item">
-							<img src="/assets/template/images/blagodar03.jpg" alt="">
+							<a href="/assets/template/images/blagodar03.jpg" data-fancybox="grateful"><img src="/assets/template/images/blagodar03.jpg" alt=""></a>
 						</div>
 						<div class="main-awards__item">
-							<img src="/assets/template/images/blagodar04.jpg" alt="">
+							<a href="/assets/template/images/blagodar04.jpg" data-fancybox="grateful"><img src="/assets/template/images/blagodar04.jpg" alt=""></a>
 						</div>
 						<div class="main-awards__item">
-							<img src="/assets/template/images/blagodar05.jpg" alt="">
+							<a href="/assets/template/images/blagodar05.jpg" data-fancybox="grateful"><img src="/assets/template/images/blagodar05.jpg" alt=""></a>
 						</div>
 					</div>
 				</div>
@@ -1049,7 +1049,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
 <link rel="stylesheet" href="/assets/template/vendor/slick/slick.css">
-<link rel="stylesheet" type="text/css" href="/assets/template/vendor/slick/slick-theme.css"/>
+<!--link rel="stylesheet" type="text/css" href="/assets/template/vendor/slick/slick-theme.css"/-->
 <script src="/assets/template/vendor/slick/slick.js"></script>
 <script src="/assets/template/js/scripts.js"></script>
 
