--- a/src/agent.html
+++ b/src/agent.html
@@ -340,7 +340,7 @@
 	<div class="single-page">
 		<div class="container">
 			<div class="single-page__grid">
-				<div class="single-page__content">
+				<div class="single-page__content stext">
 
                     <div class="crumbs">
                         <ul class="breadcrumb">
