--- a/src/agent.html
+++ b/src/agent.html
@@ -182,11 +182,11 @@
 								</div>
 							</li>
 							<li class="header-menu__item">
-								<a href="#"><span>Стоимость</span></a>
+								<a href="/price.html#"><span>Цены</span></a>
 								<div class="header-submenu">
 									<ul>
-										<li><a href="#">Стоимость похорон</a></li>
-										<li><a href="#">Стоимость кремации</a></li>
+										<li><a href="/price.html#funeral">Стоимость похорон</a></li>
+										<li><a href="/price.html#cremation">Стоимость кремации</a></li>
 									</ul>
 								</div>
 							</li>
@@ -337,7 +337,7 @@
 		</div>
 	</div>
 
-	<div class="single-page">
+	<div class="single-page single-page--agent">
 		<div class="container">
 			<div class="single-page__grid">
 				<div class="single-page__content stext">
@@ -493,7 +493,7 @@
                                 С помощью данного сервиса после заполнения всех полей к Вам на указанный адрес приедет ритуальный агент городской специализированной службы "МФЦ-Ритуал"
                             </div>
                             <div class="agent-form__inputs">
-                                <div class="agent-form__input-item">
+                                <div class="agent-form__input-item error">
                                     <input type="text" name="name" placeholder="Ваше имя">
                                 </div>
                                 <div class="agent-form__input-item">
