--- a/src/info.html
+++ b/src/info.html
@@ -371,37 +371,37 @@
                         <div class="b-info__block">
                             <div class="b-info__title">Городские учреждения</div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--uszn">УСЗН Москвы</a>
+                                <a href="/info/uszn-moskvy/" class="b-info__link b-info__link--uszn">УСЗН Москвы</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--docs">Мои документы</a>
+                                <a href="/info/mfts/" class="b-info__link b-info__link--docs">Мои документы</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--mfc">МФЦ Москвы</a>
+                                <a href="/info/mfts/" class="b-info__link b-info__link--mfc">МФЦ Москвы</a>
                             </div>
                         </div>
                         <div class="b-info__block">
                             <div class="b-info__title">конфесионные обряды</div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--orthodox">Православные похороны</a>
+                                <a href="/info/pravoslavnye-pokhorony/" class="b-info__link b-info__link--orthodox">Православные похороны</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--islam">Похороны в исламе</a>
+                                <a href="/info/musulmanskie-pokhorony/" class="b-info__link b-info__link--islam">Похороны в исламе</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--buddism">Похороны в буддизме</a>
+                                <a href="/info/pokhorony-v-buddizme/" class="b-info__link b-info__link--buddism">Похороны в буддизме</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--iudaism">Похороны в Иудаизме</a>
+                                <a href="/info/evreyskie-iudeyskie-pokhorony/" class="b-info__link b-info__link--iudaism">Похороны в Иудаизме</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--protest">Похороны в Протестанстве</a>
+                                <a href="/info/pokhorony-v-protestanstve/" class="b-info__link b-info__link--protest">Похороны в Протестанстве</a>
                             </div>
                         </div>
                         <div class="b-info__block">
                             <div class="b-info__title">правовая информация</div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--heir-rights">Права наследников</a>
+                                <a href="/info/prava-naslednikov/" class="b-info__link b-info__link--heir-rights">Права наследников</a>
                             </div>
                             
                         </div>
@@ -413,28 +413,28 @@
                                 <a href="#" class="b-info__link b-info__link--hram">Храмы на кладбищах</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--kladb">Кладбища Москвы</a>
+                                <a href="/info/kladbishcha/" class="b-info__link b-info__link--kladb">Кладбища Москвы</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--crematoriums">Крематории Москвы</a>
+                                <a href="/kremaciya/" class="b-info__link b-info__link--crematoriums">Крематории Москвы</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--morgues">Морги Москвы</a>
+                                <a href="/info/morgi/" class="b-info__link b-info__link--morgues">Морги Москвы</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--columbarium">Колумбарии Москвы</a>
+                                <a href="/info/kolumbarii-moskvy/" class="b-info__link b-info__link--columbarium">Колумбарии Москвы</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--warehouse">Трупохранилища</a>
+                                <a href="/info/trupokhranilishcha/" class="b-info__link b-info__link--warehouse">Трупохранилища</a>
                             </div>
                         </div>
                         <div class="b-info__block">
                             <div class="b-info__title">ритуальная инфраструктура Московской области</div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--kladb">Кладбища Московской области</a>
+                                <a href="/info/moskovskaya-oblast-kladbishcha/" class="b-info__link b-info__link--kladb">Кладбища Московской области</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--morgues">Морги Московской области</a>
+                                <a href="/info/morgi-moskovskoy-oblasti/" class="b-info__link b-info__link--morgues">Морги Московской области</a>
                             </div>
                         </div>
                     </div>
@@ -442,31 +442,31 @@
                         <div class="b-info__block">
                             <div class="b-info__title">Необходимые документы</div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--forma13">Форма БО-13</a>
+                                <a href="/info/forma-bo-13/" class="b-info__link b-info__link--forma13">Форма БО-13</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--certificate">Свидетельство о смерти</a>
+                                <a href="/info/svidetelstvo-o-smerti/" class="b-info__link b-info__link--certificate">Свидетельство о смерти</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--gerbcertif">Гербовое свидетельство о смерти</a>
+                                <a href="/info/gerbovoe-svidetelstvo-o-smerti/" class="b-info__link b-info__link--gerbcertif">Гербовое свидетельство о смерти</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--doc">Документы для захоронения, похорон, кремации</a>
+                                <a href="/info/dokumenty-dlya-zakhoroneniya-pokhoron-krematsii/" class="b-info__link b-info__link--doc">Документы для захоронения, похорон, кремации</a>
                             </div>
                         </div>
                         <div class="b-info__block">
                             <div class="b-info__title">Дополнительная информация</div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--whatdo">Что делать, если умер человек</a>
+                                <a href="/info/esli-sluchilas-beda/" class="b-info__link b-info__link--whatdo">Что делать, если умер человек</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--question">Вопрос-ответ</a>
+                                <a href="/faq/" class="b-info__link b-info__link--question">Вопрос-ответ</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--articles">Все статьи</a>
+                                <a href="/info/articles/" class="b-info__link b-info__link--articles">Все статьи</a>
                             </div>
                             <div class="b-info__item">
-                                <a href="#" class="b-info__link b-info__link--fraud">Схемы обмана</a>
+                                <a href="/info/skhemy-obmana/" class="b-info__link b-info__link--fraud">Схемы обмана</a>
                             </div>
                         </div>
                     </div>
